--- a/public/links/Do-condoms-prevent-genital-herpes.html
+++ b/public/links/Do-condoms-prevent-genital-herpes.html
@@ -11,7 +11,7 @@
 <h1 align="center">Do Condoms Prevent Genital Herpes?</h1>
 <br>
 <center>
-<img src="images/Skin problems.jpg" alt="Avatar" style="width:40%" align="middle">
+<img src="images/images1.jpeg" alt="Avatar" style="width:40%" align="middle">
 <p></p>
 </center>
 <p>There are dozens of conditions that affect someone's skin, and it can be hard to tell one from the other. This article tells you about about the common skin problems that can happen to you as you age.
