--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link rel="stylesheet" type="text/css" href="css/yourhealth.css" media="screen" />
+<link rel="stylesheet"  href="css/yourhealth.css" media="screen" />
 <title>YourHealth</title>
 </head>
 <body>
